<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="keyboardHidden"
    android:background="@drawable/app_background">

    <EditText
        android:id="@+id/problemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/displayHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="allClearDisp"
            android:text="@string/allClearText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="divDisp"
            android:text="@string/divideText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toBottomOf="@+id/buttonMult" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/button_backdround"
            android:onClick="dotDisp"
            android:text="@string/decimalText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="zeroDisp"
            android:text="@string/zeroText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/buttonMult"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="multDisp"
            android:text="@string/multiplyText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/buttonSub" />

        <Button
            android:id="@+id/button9"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="nineDisp"
            android:text="@string/nineText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button8"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="eightDisp"
            android:text="@string/eightText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="sevenDisp"
            android:text="@string/sevenText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="subDisp"
            android:text="@string/subtractText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

        <Button
            android:id="@+id/button6"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="sixDisp"
            android:text="@string/sixText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="fiveDisp"
            android:text="@string/fiveText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="fourDisp"
            android:text="@string/fourText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="addDisp"
            android:text="@string/addText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/buttonEquals" />

        <Button
            android:id="@+id/button3"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="threeDisp"
            android:text="@string/threeText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignChange" />

        <Button
            android:id="@+id/button2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="twoDisp"
            android:text="@string/twoText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/buttonC" />

        <Button
            android:id="@+id/button1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="oneDisp"
            android:text="@string/oneText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAC" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="equalsDisp"
            android:text="@string/equalsText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/buttonSignChange"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSignChange"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="signChangeDisp"
            android:text="@string/signChangeText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/buttonC"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/button_backdround"
            android:onClick="clearDisp"
            android:text="@string/clearText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/buttonAC"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_backdround"
        android:text="@string/back"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>